@@ -25,7 +25,8 @@ lib-y += strcmp.o strnicmp.o strcspn.o
 lib-y += memcmp.o memset.o
 lib-$(CONFIG_SMALL) += memcpy.o memmove.o
 lib-y += crc32.o xmodem.o
-lib-y += env.o spinner.o
+lib-y += spinner.o
+lib-$(CONFIG_ENV) += env.o
 lib-y += dump.o
 lib-y += zlib.o zlib-heap.o
 #lib-y += png.o
